# Red-Hat-Quality-Tiger-Team

./: .gitignore  AGGREGATOR_README.md  COMPONENT_REPO_MAPPING.md  EXEC-SUMMARY.md  FINGERPRINTING-DESIGN.md  FINGERPRINTING-IMPLEMENTATION.md  FINGERPRINTING-TEST-RESULTS.md  README.md  RHOAI-QUALITY-ASSESSMENT.md  TEST-RULES-GENERATOR-NOTEBOOKS.md  WORKFLOW.md  aggregate_quality_reports.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: plugin.json
.claude/skills/environment-infra-analyzer/: SKILL.md
.claude/skills/historical-bug-coverage/: README.md  SKILL.md  compare_analyses.py  coverage_rubric.py  evaluations.json  full_dashboard_test.py  instructions.md  repository_discovery.py  run_analysis.sh  strict_coverage_analysis.py  test_analysis.py  test_skill.py
.claude/skills/konflux-build-simulator/: FIX-SUMMARY.md  LEARNINGS.md  SKILL.md  executedKonfluxBuildSimulator-Dashboard.md  instructions.md
artifacts/pr-analyses/: pr-489-analysis.html  pr-489-analysis.md
demo-output/exec-summary/: EXEC-SUMMARY.md
demo-output/konflux-build-simulator-odh-dashboard/: KONFLUX-BUILD-SIMULATOR-ODH-DASHBOARD.md  README.md
demo-output/quality-assessment/: RHOAI-QUALITY-ASSESSMENT.md
demo-output/test-rules-generator-notebooks/: README.md
demo-outputs/: odh-dashboard-bug-coverage.html  quality-report-models-as-a-service.html
konflux-CI-Dashboard/: KONFLUX-CI-DASHBOARD.md
quality_reports_demo/: combined_dashboard_example.html
test-rules-outputs/: README.md
test-rules-outputs/notebooks/: TEST-RULES-ANALYSIS.md
(+92 files in other folders)
